fixing issue with vh on mobile devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,11 @@
 .page {
     box-sizing: border-box;
-    height: 100vh;
-    height: -webkit-fill-available;
+    height: calc(100 * var(--vh));
     padding: 5%;
-    max-height: 100vh;
+    height: calc(100 * var(--vh));
     max-height: -webkit-fill-available;
-    max-width: 100vw;
-    min-width: 98vw;
+    max-width: 100%;
+    min-width: 98%;
 }
 
 .button {
